--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -545,32 +545,58 @@
                             </div>
                         {{ end }}
 
-                        <div class="table-responsive">
-                            <table class="table table-hover table-striped table-counts mb-0" data-path="/players/{{ .Player.ID }}/achievements-summary.json" id="achievements-summary-table">
-                                <thead class="thead-light">
-                                <tr>
-                                    <th scope="col">Game</th>
-                                    <th scope="col">Have</th>
-                                    <th scope="col">%</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                </tbody>
-                            </table>
-                        </div>
 
-                        <h5 class="mt-4">Latest Achievements</h5>
-                        <div class="table-responsive">
-                            <table class="table table-hover table-striped table-counts mb-0" data-path="/players/{{ .Player.ID }}/achievements.json" id="achievements-table" data-ordering="false">
-                                <thead class="thead-light">
-                                <tr>
-                                    <th scope="col">Achievement</th>
-                                    <th scope="col">Date</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                </tbody>
-                            </table>
+                        <div class="card">
+                            <div class="card-header">
+
+                                <ul class="nav nav-tabs card-header-tabs nav-fill-mobile" role="tablist">
+                                    <li class="nav-item">
+                                        <a class="nav-link nav-link-small active" data-toggle="tab" href="#achievements-summary" role="tab">Summary</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link nav-link-small" data-toggle="tab" href="#achievements-latest" role="tab">Latest</a>
+                                    </li>
+                                </ul>
+
+                            </div>
+                            <div class="card-body">
+                                <div class="tab-content">
+                                    <div class="tab-pane show active" id="achievements-summary" role="tabpanel">
+
+                                        <div class="table-responsive">
+                                            <table class="table table-hover table-striped table-counts mb-0" data-path="/players/{{ .Player.ID }}/achievements-summary.json" id="achievements-summary-table">
+                                                <thead class="thead-light">
+                                                <tr>
+                                                    <th scope="col">Game</th>
+                                                    <th scope="col">Have</th>
+                                                    <th scope="col">%</th>
+                                                </tr>
+                                                </thead>
+                                                <tbody>
+                                                </tbody>
+                                            </table>
+                                        </div>
+
+                                    </div>
+                                    <div class="tab-pane" id="achievements-latest" role="tabpanel">
+
+                                        <div class="table-responsive">
+                                            <table class="table table-hover table-striped table-counts mb-0" data-path="/players/{{ .Player.ID }}/achievements.json" id="achievements-table" data-ordering="false">
+                                                <thead class="thead-light">
+                                                <tr>
+                                                    <th scope="col">Achievement</th>
+                                                    <th scope="col">Date</th>
+                                                </tr>
+                                                </thead>
+                                                <tbody>
+                                                </tbody>
+                                            </table>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
+
                         </div>
 
                     </div>
