--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -550,7 +550,7 @@
                             <div class="card-header">
 
                                 <ul class="nav nav-tabs card-header-tabs nav-fill-mobile" role="tablist">
-                                    <li class="nav-item">
+                                    <li class="nav-item active">
                                         <a class="nav-link nav-link-small" data-toggle="tab" href="#achievements-summary" role="tab">Summary</a>
                                     </li>
                                     <li class="nav-item">
@@ -561,7 +561,7 @@
                             </div>
                             <div class="card-body">
                                 <div class="tab-content">
-                                    <div class="tab-pane" id="achievements-summary" role="tabpanel">
+                                    <div class="tab-pane show active" id="achievements-summary" role="tabpanel">
 
                                         <div class="table-responsive">
                                             <table class="table table-hover table-striped table-counts mb-0" data-path="/players/{{ .Player.ID }}/achievements-summary.json" id="achievements-summary-table">
