--- a/cmd/webserver/templates/info.gohtml
+++ b/cmd/webserver/templates/info.gohtml
@@ -42,6 +42,11 @@
                     <li>Groups are updated when a player in the group is updated, or when the group page is looked at. Limited to once per six hours.</li>
                 </ul>
 
+                <h6>News Articles</h6>
+                <ul>
+                    <li>News articles are added when the app is updated.</li>
+                </ul>
+
                 <h6>Packages</h6>
                 <ul>
                     <li>Packages are updated instantly when the developer makes a change.</li>
