Fix stats links

--- a/cmd/webserver/templates/stats.gohtml
+++ b/cmd/webserver/templates/stats.gohtml
@@ -25,10 +25,10 @@
                         <a href="/bundles" role="button" class="btn btn-success btn-block mb-0">Total Bundles<br/>{{ comma .BundlesCount}}</a>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-4 col-xl mb-4">
-                        <a href="/bundles" role="button" class="btn btn-success btn-block mb-0">Total Achievements<br/>{{ comma64 .AchievementsCount}}</a>
+                        <a href="/achievements" role="button" class="btn btn-success btn-block mb-0">Total Achievements<br/>{{ comma64 .AchievementsCount}}</a>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-4 col-xl mb-4">
-                        <a href="/bundles" role="button" class="btn btn-success btn-block mb-0">Total Articles<br/>{{ comma64 .ArticlesCount}}</a>
+                        <a href="/news" role="button" class="btn btn-success btn-block mb-0">Total Articles<br/>{{ comma64 .ArticlesCount}}</a>
                     </div>
                 </div>
 
