--- a/cmd/webserver/templates/stats.gohtml
+++ b/cmd/webserver/templates/stats.gohtml
@@ -38,16 +38,16 @@
                         <a href="/players" role="button" class="btn btn-success btn-block mb-0">Total Players<br/>{{ comma64 .PlayersCount}}</a>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-4 col-xl mb-4">
-                        <a href="/players" role="button" class="btn btn-success btn-block mb-0">Player's Games<br/>{{ comma64 .PlayerAppsCount}}</a>
+                        <a href="/players" role="button" class="btn btn-success btn-block mb-0">Player Games<br/>{{ comma64 .PlayerAppsCount}}</a>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-4 col-xl mb-4">
-                        <a href="/players" role="button" class="btn btn-success btn-block mb-0">Player's Friends<br/>{{ comma64 .PlayerFriendsCount}}</a>
+                        <a href="/players" role="button" class="btn btn-success btn-block mb-0">Player Friends<br/>{{ comma64 .PlayerFriendsCount}}</a>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-4 col-xl mb-4">
-                        <a href="/players" role="button" class="btn btn-success btn-block mb-0">Player's Badges<br/>{{ comma64 .PlayerBadgesCount}}</a>
+                        <a href="/players" role="button" class="btn btn-success btn-block mb-0">Player Badges<br/>{{ comma64 .PlayerBadgesCount}}</a>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-4 col-xl mb-4">
-                        <a href="/players" role="button" class="btn btn-success btn-block mb-0">Player's Groups<br/>{{ comma64 .PlayerGroupsCount}}</a>
+                        <a href="/players" role="button" class="btn btn-success btn-block mb-0">Player Groups<br/>{{ comma64 .PlayerGroupsCount}}</a>
                     </div>
                 </div>
 
