Link to xp from stats

--- a/cmd/webserver/templates/stats.gohtml
+++ b/cmd/webserver/templates/stats.gohtml
@@ -61,7 +61,10 @@
                     <i class="fas fa-spinner fa-spin"></i>
                 </div>
 
-                <h5>Game DB Player Levels <small>(For levels below 2,000)</small></h5>
+                <h5 class="clearfix">
+                    Game DB Player Levels <small>(For levels below 2,000)</small>
+                    <small class="float-right">See <a href="/experience">Experience</a> for more!</small>
+                </h5>
                 <div class="chart mb-4" id="player-levels">
                     <i class="fas fa-spinner fa-spin"></i>
                 </div>
