--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -232,7 +232,7 @@
                                             <tr>
                                                 <th scope="row">Micro Trailer</th>
                                                 <td>
-                                                    <video controls preload="metadata">
+                                                    <video controls preload="none">
                                                         <source src="{{ https (.App.GetMicroTrailer) }}" type="video/webm">
                                                         Sorry, your browser doesn't support embedded videos.
                                                     </video>
@@ -836,7 +836,7 @@
                         {{if gt (len .App.Movies) 0 }}
                             <div id="videos">
                                 {{ range $key, $value := .App.Movies }}
-                                    <video controls preload="metadata">
+                                    <video controls preload="none">
                                         <source src="{{ https .PathFull }}" type="video/webm">
                                         Sorry, your browser doesn't support embedded videos.
                                     </video>
