--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -445,7 +445,7 @@
                             <div class="col-12 col-md-6 col-lg-5 col-xl-4 mb-2">
                                 <div class="form-group">
                                     <label for="dlc-search">Search</label>
-                                    <input name="search" type="search" class="form-control gdb-search" id="dlc-search">
+                                    <input name="search" type="search" class="form-control" id="dlc-search">
                                 </div>
                             </div>
                         </div>
@@ -652,7 +652,7 @@
                             <div class="col-12 col-md-6 col-lg-5 col-xl-4 mb-2">
                                 <div class="form-group">
                                     <label for="items-search">Search</label>
-                                    <input name="search" type="search" class="form-control gdb-search" id="items-search">
+                                    <input name="search" type="search" class="form-control" id="items-search">
                                 </div>
                             </div>
                         </div>
