--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -470,7 +470,7 @@
                                 <div class="col-12 col-md-6 col-lg-5 col-xl-4 mb-2">
                                     <div class="form-group">
                                         <label for="player-games-search" class="sr-only sr-only-focusable">Game Search</label>
-                                        <input type="text" id="player-games-search" name="player-games-search" class="form-control gdb-search" placeholder="Game Search">
+                                        <input type="text" id="player-games-search" name="player-games-search" class="form-control" placeholder="Game Search">
                                     </div>
                                 </div>
                             </div>
