--- a/cmd/webserver/templates/_header.gohtml
+++ b/cmd/webserver/templates/_header.gohtml
@@ -221,6 +221,7 @@
                             <a class="dropdown-item" href="/contact">Contact</a>
                             <a class="dropdown-item" href="/info">Info</a>
                             <a class="dropdown-item" href="/experience">Experience Table</a>
+                            <a class="dropdown-item" href="/achievements">Achievements Search</a>
 
                             <div class="dropdown-divider"></div>
 
