--- a/cmd/webserver/templates/achievements.gohtml
+++ b/cmd/webserver/templates/achievements.gohtml
@@ -32,18 +32,15 @@
         {{ template "_flashes" . }}
 
         <div class="card">
-            {{ template "_apps_header" . }}
             <div class="card-body">
 
                 <div class="table-responsive">
-                    <table class="table table-hover table-striped table-counts mb-0" data-path="/apps/achievements/achievements.json">
+                    <table class="table table-hover table-striped table-counts mb-0" data-path="/achievements/achievements.json">
                         <thead class="thead-light">
                         <tr>
-                            <th scope="col">App</th>
-                            <th scope="col">Achievements</th>
-                            <th scope="col" nowrap="nowrap">Avg Completion</th>
-                            <th scope="col">Price</th>
-                            <th scope="col">Icons</th>
+                            <th scope="col">Name</th>
+                            <th scope="col">Completed</th>
+                            <th scope="col" class="thin" data-toggle="tooltip" data-placement="top" title="Search Score">#</th>
                         </tr>
                         </thead>
                         <tbody>
