--- a/cmd/webserver/templates/achievements.gohtml
+++ b/cmd/webserver/templates/achievements.gohtml
@@ -15,7 +15,7 @@
 
                     <div class="input-group input-group-lg mt-1 mb-2">
                         <label for="search" class="sr-only sr-only-focusable">Search for a Game</label>
-                        <input class="form-control" type="search" name="search" placeholder="Search for a Game" id="search" autofocus>
+                        <input class="form-control" type="search" name="search" placeholder="Search for a Game" id="search" autofocus data-col-sort="2" data-hightlight="1">
                         <div class="input-group-append">
                             <input type="submit" value="Search" class="input-group-text">
                         </div>
