Speed up markjs

--- a/cmd/webserver/templates/stats_categories.gohtml
+++ b/cmd/webserver/templates/stats_categories.gohtml
@@ -40,7 +40,7 @@
                         <tbody class="categories-list">
                         {{ range $key, $value := .Categories }}
                             <tr data-link="{{.GetPath}}">
-                                <td class="markable"><i class="fas fa-star"></i> {{ .GetName }}</td>
+                                <td><i class="fas fa-star"></i> <span class="markable">{{ .GetName }}</span></td>
                                 <td>{{ comma .Apps }}</td>
                                 <td>{{ index $.Prices .ID }}</td>
                                 <td>{{ .GetMeanScore }}</td>
