Show more in group tables

--- a/cmd/webserver/templates/group.gohtml
+++ b/cmd/webserver/templates/group.gohtml
@@ -48,7 +48,10 @@
                 <table class="table table-hover table-striped table-counts mb-0" data-path="/groups/{{ .Group.ID }}/table.json" id="players" data-ordering="false">
                     <thead class="thead-light">
                     <tr>
+                        <th class="thin">Flag</th>
                         <th>Player</th>
+                        <th>Level</th>
+                        <th class="thin"></th>
                     </tr>
                     </thead>
                     <tbody>
