Improve col widths

--- a/cmd/webserver/templates/badge.gohtml
+++ b/cmd/webserver/templates/badge.gohtml
@@ -58,8 +58,8 @@
                             <th scope="col" class="thin">Rank</th>
                             <th scope="col">Player</th>
                             <th scope="col">Level</th>
-                            <th scope="col">Achieved</th>
-                            <th scope="col"></th>
+                            <th scope="col" class="thin">Achieved</th>
+                            <th scope="col" class="thin"></th>
                         </tr>
                         </thead>
                         <tbody>
