Fix empty badge icons

--- a/cmd/webserver/templates/badge.gohtml
+++ b/cmd/webserver/templates/badge.gohtml
@@ -5,7 +5,9 @@
 
         <div class="jumbotron">
 
-            <img src="{{ .Badge.GetIcon }}" alt="{{ .Badge.GetName }}">
+            {{ if ne .Badge.GetIcon "" }}
+                <img src="{{ .Badge.GetIcon }}" alt="{{ .Badge.GetName }}">
+            {{ end }}
 
             {{ template "_social" .Badge }}
 
