--- a/cmd/webserver/templates/badge.gohtml
+++ b/cmd/webserver/templates/badge.gohtml
@@ -55,7 +55,7 @@
 
                 <p class="mb-0">
                     {{ if gt .Badge.BadgeScarcity 0 }}
-                        In total <strong>{{ comma .Badge.BadgeScarcity }}</strong> have this badge on Steam
+                        In total <strong>{{ comma .Badge.BadgeScarcity }}</strong> players have this badge on Steam
                     {{ end }}
                 </p>
 
