Fix stats links

--- a/cmd/webserver/templates/stats.gohtml
+++ b/cmd/webserver/templates/stats.gohtml
@@ -44,10 +44,10 @@
                         <a href="/players" role="button" class="btn btn-success btn-block mb-0">Player Friends<br/>{{ comma64 .PlayerFriendsCount}}</a>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-4 col-xl mb-4">
-                        <a href="/players" role="button" class="btn btn-success btn-block mb-0">Player Badges<br/>{{ comma64 .PlayerBadgesCount}}</a>
+                        <a href="/badges" role="button" class="btn btn-success btn-block mb-0">Player Badges<br/>{{ comma64 .PlayerBadgesCount}}</a>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-4 col-xl mb-4">
-                        <a href="/players" role="button" class="btn btn-success btn-block mb-0">Player Groups<br/>{{ comma64 .PlayerGroupsCount}}</a>
+                        <a href="/groups" role="button" class="btn btn-success btn-block mb-0">Player Groups<br/>{{ comma64 .PlayerGroupsCount}}</a>
                     </div>
                 </div>
 
