Update mark style

--- a/cmd/webserver/assets/sass/_global.scss
+++ b/cmd/webserver/assets/sass/_global.scss
@@ -649,5 +649,8 @@ div.json-hover {
 
 //
 .mark, mark {
-    background: #28a74544;
+    background: inherit;
+    color: inherit;
+    text-decoration: underline;
+    padding: 0;
 }
