Update info page

--- a/cmd/webserver/templates/info.gohtml
+++ b/cmd/webserver/templates/info.gohtml
@@ -27,6 +27,12 @@
                     <li>App trends are currently calculated use the algorithm taken from <a href="https://stackoverflow.com/a/49604913/472084" target="_blank" rel="noopener">this post</a>.</li>
                 </ul>
 
+                <h6>Badges</h6>
+                <ul>
+                    <li>Player badges are updated when the player is updated.</li>
+                    <li>Values on the badges page are updated daily.</li>
+                </ul>
+
                 <h6>Bundles</h6>
                 <ul>
                     <li>Bundles are updated when an app in the bundle is updated.</li>
